# COMP-5421

./: .gitignore  Line.cpp  Line.h  LineList.cpp  README.md  input_a.txt  input_b.txt  readme.txt
Assignment 1/: LineList.h  LineListTestDriver.cpp
Assignment 2/: CMakeLists.txt  Command.cpp  Command.h  LineEd.cpp  LineEd.h  LineEdDriver.cpp
Assignment 3/: Quad.cpp  Quad.h  QuadTestDriver.cpp  readme.txt
Assignment 4/: AcuteTriangle.cpp  AcuteTriangle.h  CMakeLists.txt  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Shape.cpp  Shape.h  SlotMachine.cpp  SlotMachine.h  Triangle.cpp  Triangle.h  readme.txt  shape_slotmachine_driver.cpp
Assignment 5/: A5_all.cpp  A5_all.h  CMakeLists.txt
